Add kafka module